force-app/main/default/objects/Onboarding_SLA_Rule__mdt/Onboarding_SLA_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Onboarding SLA Rule</label>
    <pluralLabel>Onboarding SLA Rules</pluralLabel>
    <description>Defines SLA windows for each onboarding touchpoint. Used by OnboardingSlaService.</description>
</CustomObject>