force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Anchor_Field__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Field__c</fullName>
    <label>Anchor Field</label>
    <description>API name of date field on Onboarding__c that starts the SLA clock</description>
    <length>100</length>
    <type>Text</type>
</CustomField>