force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Breach_Action__c.field-meta.xml
<CustomField>
    <fullName>Breach_Action__c</fullName>
    <label>Breach Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Now-Item</fullName><default>true</default><label>Now-Item</label></value>
            <value><fullName>Now-Item + TL Alert</fullName><default>false</default><label>Now-Item + TL Alert</label></value>
            <value><fullName>Close-Off Blocked</fullName><default>false</default><label>Close-Off Blocked</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>