force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Critical_Threshold_Offset__c.field-meta.xml
<CustomField>
    <fullName>Critical_Threshold_Offset__c</fullName>
    <label>Critical Threshold Offset</label>
    <description>Days from anchor for Critical status (optional)</description>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>