force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <label>Date Field</label>
    <description>API name of touchpoint completion date field on Onboarding__c</description>
    <length>100</length>
    <type>Text</type>
</CustomField>