force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Touchpoint_Name__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Name__c</fullName>
    <label>Touchpoint Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>