force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CD</fullName><default>true</default><label>CD (Calendar Days)</label></value>
            <value><fullName>WD</fullName><default>false</default><label>WD (Working Days)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>