force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Window_End_Offset__c.field-meta.xml
<CustomField>
    <fullName>Window_End_Offset__c</fullName>
    <label>Window End Offset</label>
    <description>Days from anchor to window close</description>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>