force-app/main/default/objects/Onboarding_SLA_Rule__mdt/fields/Window_Start_Offset__c.field-meta.xml
<CustomField>
    <fullName>Window_Start_Offset__c</fullName>
    <label>Window Start Offset</label>
    <description>Days from anchor to window open</description>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>